--- a/src/App.css
+++ b/src/App.css
@@ -23,14 +23,16 @@
   background-color: rgb(151, 150, 150);
   border-radius: 10px;
 }
-
+.skey{
+  background-color: rgb(177, 247, 232);
+}
 button {
   width: 25%;
   height: 60px;
   font-size: 30px;
   border: 1px solid black;
   border-radius: 5px;
-  background-color: bisque;
+  background-color: rgb(255, 255, 255);
   
 }
 h1 {
